--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: Barlow;
+    src: url(assets/fonts/BarlowSemiCondensed-Regular.ttf);
+  }
+
+* {
+    padding: 0;
+    margin: 0;
+    font-family: Barlow;
+}
+
+a {
+    text-decoration: none;;
+    color: #444;
+    transition: .1s;
+}
+a:hover {
+    color: #dec129;
+}
