--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,12 @@
     src: url(assets/fonts/BarlowSemiCondensed-Regular.ttf);
   }
 
+  @font-face {
+font-family: SecularOne;
+src: url(assets/fonts/SecularOne-Regular.ttf);
+}
+
+
 * {
     padding: 0;
     margin: 0;
@@ -17,3 +23,48 @@ a {
 a:hover {
     color: #dec129;
 }
+
+//Form
+
+form {
+    width: 450px;
+    margin: 0 auto;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1em;
+}
+
+.form-group label {
+    font-family: SecularOne;
+    font-size: 1.1em;
+    margin-bottom: .2em;
+}
+
+.form-group input,
+.form-group textarea {
+    padding: .6em;
+    color: #3d3d3d;
+    font-size: 18px;
+}
+
+input[type="submit"] {
+    font-family: SecularOne;
+    background-color: #efefef;
+    border-radius: 7px;
+    border: 2px solid transparent;
+    padding: 0.6em 1em; 
+    font-size: 1em;
+    cursor: pointer;
+    transition: .1s;
+}
+
+input[type="submit"]:hover{
+    color: #353535;
+    background-color: transparent;
+    border-color: #dec129;
+
+}
+
