--- a/src/app/components/pages/new-task/new-task.component.html
+++ b/src/app/components/pages/new-task/new-task.component.html
@@ -1,2 +1,2 @@
 <h2>Nova Tarefa</h2>
-<app-task-form [btnText]="btnText"></app-task-form>
+<app-task-form [btnText]="btnText" (onSubmit)="createHandler($event)"></app-task-form>
