--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,3 +68,11 @@ input[type="submit"]:hover{
 
 }
 
+.validation-error p {
+    color: #dc3145;
+    margin-top: .4em;
+    border-left: 3px solid #dc3145;
+    padding-left: .2em;
+    background-color: #ffa7b172;
+}
+
