--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<h2>Página Home</h2>
+<div class="home-container">
+    <h1>Minhas Tarefas</h1>
+    <div *ngFor="let task of allTasks">
+        <h2>{{task.nome}}</h2>
+
+    </div>
+</div>
