--- a/src/app/components/task-form/task-form.component.html
+++ b/src/app/components/task-form/task-form.component.html
@@ -1,13 +1,14 @@
 <form (ngSubmit)="submit()" [formGroup]="taskForm" #formDir="ngForm">
+    <input type="hidden" formControlName="id" />
     <div class="form-group">
-        <label for="name">Nome:</label>
+        <label for="nome">Nome:</label>
         <input type="text" placeholder="Nome da tarefa" formControlName="nome" required/>
         <div *ngIf="nome.invalid &&formDir.submitted" class="validation-error">
             <p *ngIf="nome.errors?.['required']">O Nome é obrigatório</p>
         </div>
     </div>
     <div class="form-group">
-        <label for="name">Descrição:</label>
+        <label for="descricao">Descrição:</label>
         <textarea placeholder="Detalhes sobre a tarefa" maxlength="140" formControlName="descricao"></textarea>
         <div *ngIf="descricao.invalid &&formDir.submitted" class="validation-error">
             <p *ngIf="descricao.errors?.['required']">A Descrição é obrigatória</p>
